--- a/_config.yml
+++ b/_config.yml
@@ -3,16 +3,16 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: 我在马路边
 subtitle:
 description:
-author: John Doe
+author: hhongwen
 language:
 timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: https://hhongwen.cn/
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
