add some bolg file

--- a/themes/bmw/_config.yml
+++ b/themes/bmw/_config.yml
@@ -1,5 +1,5 @@
 # 更多细节请参考 demo: https://github.com/dongyuanxin/theme-bmw/blob/master/demo._config.yml
-keywords: Hexo, theme-bmw
+keywords: 韩洪文, hhongwen, PNote, Hexo, Netlify, git
 
 # 站点图标和APP图标
 favicon: 
