--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,8 @@ timezone:
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https://hhongwen.cn/
 root: /
-permalink: :year/:month/:day/:title/
+# permalink: :year/:month/:day/:title/
+permalink: :year:month:day/:id/
 permalink_defaults:
 
 # Directory
