publis git usage one

--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,7 @@ default_layout: post
 titlecase: false # Transform title into titlecase
 external_link: true # Open external links in new tab
 filename_case: 0
+# 开启查看草稿
 render_drafts: false
 post_asset_folder: false
 relative_link: false
