add frindlink avatar

--- a/themes/bmw/_config.yml
+++ b/themes/bmw/_config.yml
@@ -155,3 +155,9 @@ friends:
     site: http://guoxiaobei.com/ # 站点地址
     meta: 小北最帅！ # 站点描述
 
+  -
+    nickname: 野孩子 # 昵称
+    avatar: /images/avatar.jpg # 头像链接
+    site: https://yehaizi.top # 站点地址
+    meta: 目标前栈架构师 # 站点描述
+
