add set model for git usage

--- a/themes/bmw/_config.yml
+++ b/themes/bmw/_config.yml
@@ -91,6 +91,12 @@ nav:
   - 
     name: 主页
     path: /
+  - 
+    name: 系列
+    children:
+      -
+        name: Git使用教程
+        path: /tags/Git
   -
     name: 归档
     path: /archives/
