add friendlink and edit blog name/about

--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 我在马路边
+title: 摆渡-韩洪文
 subtitle: PNote
-description: 记录和分享个人的学习和生活。
-author: hhongwen
+description: 敲击键盘的摆渡人
+author: 韩洪文
 language: zh-Hans
 timezone:
 
