--- a/themes/pln/_config.yml
+++ b/themes/pln/_config.yml
@@ -38,5 +38,5 @@ valine:
 
 bookmark:
   -
-    nickname: 我在马路边 # 昵称
-    site: https://hhongwen.cn # 站点地址
+    nickname: 笔记 # 昵称
+    site: https://note.hhongwen.work # 站点地址
