--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,7 @@ skip_render:
 # Writing
 new_post_name: :title.md # File name of new posts
 default_layout: post
+auto_spacing: true # 在中文和英文之间加入空格
 titlecase: false # Transform title into titlecase
 external_link:
   enable: true # Open external links in new tab
